tests/reference/run-scalar_allocation_check_01-a82b6b0.stderr
runtime error: Variable 'x' is not allocated.
 --> tests/errors/scalar_allocation_check_01.f90:4:29
  |
4 |     integer, allocatable :: x
  |                             ^
